feat: leader election
